Fixed deployment issues

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ CONNECTION_STRING = mongodb://localhost:27017/
 secret= I-love-my-dog
 API_URL= /api/v1
 JWT_SECRET=I-love-my-dog
+NODE_ENV = production
