port number fixed

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-CONNECTION_STRING = mongodb://localhost:27017/
+CONNECTION_STRING = postgresql://farmerapp_user:WjxpSuSO8DS7bg9QBKLbHrI4soFWDumN@dpg-d0een5s9c44c73811190-a.oregon-postgres.render.com/farmerapp
 secret= I-love-my-dog
 API_URL= /api/v1
 JWT_SECRET=I-love-my-dog
